# Epstein-Pipeline

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  new-data-source.md  person-correction.md
.github/workflows/: ci.yml  publish.yml  validate-data.yml
data/: persons-registry.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_SOURCES.md  PROCESSORS.md  SEA_DOUGHNUT.md  SITE_SYNC.md
scripts/: apply-entity-merges.py  assemble-hoc-pdfs.py  backfill-hoc-ocr-fast.py  backfill-hoc-ocr.py  backfill-pdf-urls.py  build-face-gallery.py  check-email-schema.py  detect-faces-ds10.py  detect-faces-test.py  download-ds10.py  ds10-enrichment-pipeline.py  enrich-ds10-vision-batch.py  enrich-media-vision.py  export-depositions-to-neon.py  export-ds10-media-fast.py  export-ds10-media-json.py  export-ds10-split-to-neon.py  export-ds10-transcripts-to-neon.py  extract-deposition-events.py  extract-ds10-fast.py  extract-ds10-images.py  extract-ds10-notable.py  extract-ds10-turbo.py  fix-ds9-mislabeled-titles.py  gliner-pilot.py  ingest-archive-media.py  ingest-ds10-photos.py  ingest-ds10-to-neon.py  ingest-external-source.py  ingest-featured-releases.py  ingest-jmail.py  ingest-missing-ho-and-fbi.py  link-doj-datasets-to-ia.py  link-ds10-media.py  link-hoc-persons.py  link-oversight-to-ia.py  match-faces.py  ner-ds10-fast.py  ner-ds10-persons.py  ocr-via-cli.py  (+8 more)
src/epstein_pipeline/: __init__.py  cli.py  config.py  state.py
src/epstein_pipeline/downloaders/: archive.py  archive_org.py  courtlistener.py  doj.py  fec_enrich.py  house_oversight.py  huggingface.py  kaggle.py  nccs.py  nonprofits.py  opensanctions.py  propublica_nonprofits.py  sec_edgar.py  video_depositions.py
src/epstein_pipeline/exporters/: csv_export.py  json_export.py  neo4j_export.py  neon_export.py  neon_schema.py  site_sync.py  sqlite_export.py
src/epstein_pipeline/importers/: __init__.py  hoc_loader.py  nonprofits.py  sea_doughnut.py
src/epstein_pipeline/models/: __init__.py  document.py  forensics.py  nonprofit.py  registry.py  temporal.py
src/epstein_pipeline/processors/: chunker.py  classifier.py  confidence.py  dedup.py  embeddings.py  entities.py  entity_resolution.py  image_extractor.py  knowledge_graph.py  ocr.py  person_linker.py  plist_forensics.py  pymupdf_extractor.py  redaction.py  structured_extractor.py  summarizer.py  temporal_extractor.py  transcriber.py
src/epstein_pipeline/utils/: hashing.py  parallel.py  progress.py
src/epstein_pipeline/validators/: integrity.py  schema.py
tests/: conftest.py  test_chunker.py  test_classifier.py  test_confidence.py  test_coref_and_gliner2.py  test_dedup.py  test_embeddings.py  test_entities.py  test_entity_resolution.py  test_json_export.py  test_knowledge_graph.py  test_models.py  test_neo4j_export.py  test_neon_export.py  test_neon_schema.py  test_parallel.py  test_person_linker.py  test_redaction.py  test_sea_doughnut_import.py  test_sqlite_export.py  test_state.py  test_temporal_extractor.py
