[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epstein-pipeline"
version = "0.2.0"
description = "Open source document processing pipeline for the Epstein case files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Epstein Exposed", email = "contact@epsteinexposed.com"},
]
keywords = ["epstein", "osint", "document-processing", "ocr", "pipeline", "forensics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rapidfuzz>=3.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
ocr = [
    "docling>=2.0",
]
pymupdf = [
    "pymupdf>=1.24",
]
nlp = [
    "spacy>=3.7",
]
ai = [
    "openai>=1.0",
]
vision = [
    "pymupdf>=1.24",
    "Pillow>=10.0",
]
transcription = [
    "faster-whisper>=1.0",
]
embeddings = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "numpy>=1.24",
]
all = [
    "epstein-pipeline[ocr,pymupdf,nlp,ai,vision,transcription,embeddings]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
epstein-pipeline = "epstein_pipeline.cli:cli"

[project.urls]
Homepage = "https://epsteinexposed.com"
Repository = "https://github.com/stonesalltheway1/Epstein-Pipeline"
Issues = "https://github.com/stonesalltheway1/Epstein-Pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N815"]  # mixedCase field names match site TypeScript types

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
