[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epstein-pipeline"
version = "1.0.0"
description = "World-class document processing pipeline for the Epstein case files — OCR, NER, dedup, embeddings, knowledge graph, Neon Postgres export"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Epstein Exposed", email = "contact@epsteinexposed.com"},
]
keywords = ["epstein", "osint", "document-processing", "ocr", "pipeline", "forensics", "pgvector", "semantic-search"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rapidfuzz>=3.0",
    "httpx>=0.25",
    "datasketch>=1.6",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
ocr = [
    "docling>=2.0",
]
ocr-surya = [
    "surya-ocr>=0.8",
]
ocr-gpu = [
    "olmocr>=0.1",
]
pymupdf = [
    "pymupdf>=1.24",
]
nlp = [
    "spacy>=3.7",
]
nlp-gliner = [
    "gliner>=0.2",
]
ai = [
    "openai>=1.0",
]
vision = [
    "pymupdf>=1.24",
    "Pillow>=10.0",
]
transcription = [
    "faster-whisper>=1.0",
]
transcription-diarize = [
    "whisperx @ git+https://github.com/m-bain/whisperX.git",
    "pyannote.audio>=3.1",
    "torch>=2.0",
]
embeddings = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "numpy>=1.24",
]
neon = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
]
classify = [
    "transformers>=4.40",
    "torch>=2.0",
]
classify-fast = [
    "gliner>=0.2",
    "torch>=2.0",
]
structured = [
    "instructor>=1.0",
    "openai>=1.0",
]
neo4j = [
    "neo4j>=5.0",
]
splink = [
    "splink>=4.0",
]
audit = [
    "anthropic>=0.40",
    "voyageai>=0.3",
    "cohere>=5.0",
    "SPARQLWrapper>=2.0",
    "psycopg[binary]>=3.1",
]
all = [
    "epstein-pipeline[ocr,ocr-surya,pymupdf,nlp,nlp-gliner,ai,vision,transcription,transcription-diarize,embeddings,neon,classify,classify-fast,structured,audit,neo4j,splink]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
epstein-pipeline = "epstein_pipeline.cli:cli"

[project.urls]
Homepage = "https://epsteinexposed.com"
Repository = "https://github.com/stonesalltheway1/Epstein-Pipeline"
Issues = "https://github.com/stonesalltheway1/Epstein-Pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N815"]  # mixedCase field names match site TypeScript types

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
